[IMP] implementacion de dashboard , cambios de pagos , y automatizacion por pagos

--- a/views/gema_menus.xml
+++ b/views/gema_menus.xml
@@ -5,5 +5,6 @@
     <menuitem id="menu_students" name="Estudiantes" parent="menu_gestion_contratos_root" sequence="3" action="action_student"/>
     <menuitem id="menu_subjects" name="Materias" parent="menu_gestion_contratos_root" sequence="2" action="gema_subjects_action"/>
     <menuitem id="menu_contracts" name="Contratos" parent="menu_gestion_contratos_root" sequence="1" action="action_gema_contracts"/>
+    <menuitem id="menu_gema_payments" name="Gestión de Pagos" parent="menu_gestion_contratos_root" action="action_gema_payments"/>
 
 </odoo>
