--- a/views/gema_contracts.xml
+++ b/views/gema_contracts.xml
@@ -13,76 +13,111 @@
         </field>
     </record>
 
-    <!-- Form View for Contracts -->
     <record id="view_gema_contracts_form" model="ir.ui.view">
-        <field name="name">gema.contracts.form</field>
-        <field name="model">gema.contracts</field>
-        <field name="arch" type="xml">
+    <field name="name">gema.contracts.form</field>
+    <field name="model">gema.contracts</field>
+    <field name="arch" type="xml">
         <header>
-        <button
-            name="approve_contract"
-            string="Aprobar Contrato"
-            type="object"
-            class="btn-primary"
-            attrs="{'invisible': [('state', '=', 'confirmed')]}"/>
+            <button
+                name="approve_contract"
+                string="Aprobar Contrato"
+                type="object"
+                class="btn-primary"
+                attrs="{'invisible': [('state', '=', 'confirmed')]}"/>
         </header>
         <form string="Contrato">
-                <sheet>
-                    <h1>
-                        <field name="name" class="oe_inline" readonly="1"/>
-                    </h1>
+            <sheet>
+                <h1>
+                    <field name="name" class="oe_inline" readonly="1"/>
+                </h1>
+                <group>
                     <group>
-                        <group>
-                            <field name="student_id"/>
-                            <field name="state" readonly="1"/>
-                        </group>
-                        <group>
-                            <field name="total_amount"  readonly="1"/>
-                        </group>
+                        <field name="student_id"/>
+                        <field name="state" readonly="1"/>
                     </group>
-                    <notebook>
-                        <page string="Materias" attrs="{'readonly': [('student_id', '=', False)]}">
-                            <field name="line_ids" context="{'default_contract_id': id, 'student_id': student_id}">
-                                <tree >
-                                    <field name="subject_id"/>
-                                    <field name="teacher_id"/>
-                                    <field name="price" />
-                                </tree>
-                                <form string="Materia">
-                                    <sheet>
+                    <group>
+                        <field name="total_amount" readonly="1"/>
+                        <field name="total_paid" readonly="1"/>
+                    </group>
+                </group>
+                <notebook>
+                    <page string="Materias" attrs="{'readonly': [('student_id', '=', False)]}">
+                        <field name="line_ids" context="{'default_contract_id': id, 'student_id': student_id}">
+                            <tree>
+                                <field name="subject_id"/>
+                                <field name="teacher_id"/>
+                                <field name="price"/>
+                            </tree>
+                            <form string="Materia">
+                                <sheet>
+                                    <group>
                                         <group>
-                                            <group>
-                                                <field name="subject_id" domain="[('id', 'in', allowed_subject_ids)]"/>
-                                                <field name="teacher_id"/>
-                                                <field name="price" />
-                                                <field name="allowed_subject_ids" invisible="1"/>
-                                            </group>
-                                            <group>
-                                            </group>
+                                            <field name="subject_id" domain="[('id', 'in', allowed_subject_ids)]"/>
+                                            <field name="teacher_id"/>
+                                            <field name="price"/>
+                                            <field name="allowed_subject_ids" invisible="1"/>
                                         </group>
-                                    </sheet>
-                                </form>
-                            </field>
-                        </page>
-                        <page string="Factura" attrs="{'invisible': [('invoice_id', '=', False)]}">
+                                    </group>
+                                </sheet>
+                            </form>
+                        </field>
+                    </page>
+                    <page string="Factura" attrs="{'invisible': [('invoice_id', '=', False)]}">
                         <sheet>
-                        <group >
-                            <field name="invoice_id" readonly="1"/>
-                        </group>
+                            <group>
+                                <field name="invoice_id" readonly="1"/>
+                            </group>
                         </sheet>
-                        </page>
-                        <page string="Producto"  attrs="{'invisible': [('product_id', '=', False)]}">
+                    </page>
+                    <page string="Producto" attrs="{'invisible': [('product_id', '=', False)]}">
                         <sheet>
-                        <group >
-                            <field name="product_id" readonly="1"/>
-                        </group>
+                            <group>
+                                <field name="product_id" readonly="1"/>
+                            </group>
                         </sheet>
-                        </page>
-                    </notebook>
-                </sheet>
-            </form>
-        </field>
-    </record>
+                    </page>
+                    <page string="Pagos Asociados">
+                        <field name="payment_ids">
+                            <tree editable="bottom">
+                                <field name="name"/>
+                                <field name="amount"/>
+                                <field name="date"/>
+                                <field name="state"/>
+                            </tree>
+                            <form string="Pago Asociado">
+                                <sheet>
+                                    <group>
+                                        <group>
+                                            <field name="name"/>
+                                            <field name="amount"/>
+                                            <field name="date"/>
+                                            <field name="state"/>
+                                        </group>
+                                        <group>
+                                            <field name="contract_id" readonly="1"/>
+                                        </group>
+                                    </group>
+                                </sheet>
+                            </form>
+                        </field>
+                    </page>
+                    <page string="Adjuntos">
+                        <field name="attachment_ids">
+                            <tree>
+                                <field name="name"/>
+                                <field name="create_date" string="Fecha de creación"/>
+                                <field name="type" invisible="1"/>
+                                <field name="res_id" invisible="1"/>
+                                <field name="res_model" invisible="1"/>
+                            </tree>
+                        </field>
+                    </page>
+                </notebook>
+            </sheet>
+        </form>
+    </field>
+</record>
+
 
     <record id="action_gema_contracts" model="ir.actions.act_window">
         <field name="name">Contratos</field>
