--- a/views/dashboard_embebe.xml
+++ b/views/dashboard_embebe.xml
@@ -7,8 +7,8 @@
                     <div class="row">
                         <div class="col-md-12">
                             <!-- Iframe para embeber el contenido -->
-                            <iframe src="/gema/dashboard/contracts" 
-                                    style="width: 100%; height: 600px; border: none;">
+                            <iframe src="/gema/dashboard/contracts"
+                                    style="width: 100%; height: 100%; border: none;">
                             </iframe>
                         </div>
                     </div>
@@ -16,4 +16,11 @@
             </div>
         </t>
     </template>
+
+    <record id="action_dashboard_prueba" model="ir.actions.act_url">
+        <field name="name">Dashboard</field>
+        <field name="type">ir.actions.act_url</field>
+        <field name="url">/gema/dashboard/prueba</field>
+        <field name="target">self</field>
+    </record>
 </odoo>
